[package]
name = "rust-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and WebSocket support
axum = { version = "0.7.2", features = ["ws"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
hyper = { version = "1.1.1", features = ["full"] }
futures = "0.3.30"

# Authentication and security
jsonwebtoken = "9.2.0"
bcrypt = "0.10.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# In-memory storage
dashmap = "5.5.3"
lazy_static = "1.4.0"
